[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Maps/BossOne.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/Sans titre.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Bunker/bunkerdestroy.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Bunker/Couloir bunker 2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Entities/Tentacle3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Entities/OneOrgan.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tiles/Bunker/tentacle1.png.png" type="Texture" id=8]
[ext_resource path="res://Tiles/Bunker/tentacle2.png" type="Texture" id=9]
[ext_resource path="res://Scripts/BossParts/OneHead.gd" type="Script" id=10]
[ext_resource path="res://Tiles/Bunker/head_tentacle_close.png" type="Texture" id=11]
[ext_resource path="res://Tiles/Bunker/head_tentacle.png" type="Texture" id=12]
[ext_resource path="res://Sons/Hurlement.wav" type="AudioStream" id=13]
[ext_resource path="res://Sprites/Characters/PNJ.tres" type="SpriteFrames" id=14]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=15]
[ext_resource path="res://Sons/Appel.wav" type="AudioStream" id=16]
[ext_resource path="res://Tiles/Bunker/organ_dead.png" type="Texture" id=17]
[ext_resource path="res://Tiles/Bunker/Rocks.png" type="Texture" id=18]
[ext_resource path="res://Sons/Boss1organ.wav" type="AudioStream" id=19]
[ext_resource path="res://Scenes/Player/GUICanvas.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "scream",
"speed": 5.0
} ]

[node name="BossOne" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="back" type="Sprite" parent="Node2D"]
position = Vector2( 19.2092, 7.07099 )
scale = Vector2( 7.29098, 5.30702 )
z_index = -10
texture = ExtResource( 2 )

[node name="BACKS" type="Node2D" parent="Node2D"]
editor/display_folded = true
z_index = -10

[node name="Salle" type="AnimatedSprite" parent="Node2D/BACKS"]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )

[node name="couloir" type="Sprite" parent="Node2D/BACKS"]
position = Vector2( -42.5225, 215.548 )
scale = Vector2( -1, 1 )
texture = ExtResource( 4 )

[node name="player" parent="Node2D" instance=ExtResource( 5 )]
position = Vector2( 0, 0 )

[node name="Tentacle3" parent="Node2D" instance=ExtResource( 6 )]

[node name="soldier" parent="Node2D" instance=ExtResource( 7 )]

[node name="Tentacle1" type="KinematicBody2D" parent="Node2D"]
editor/display_folded = true
position = Vector2( 61.9831, -82.3454 )
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/Tentacle1"]
position = Vector2( -0.59087, -0.539719 )
rotation = 0.0163867
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
offset = Vector2( -75.1744, 105.799 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Tentacle1"]
visible = false
position = Vector2( -60.8534, 84.0187 )
polygon = PoolVector2Array( -92.4357, -74.0381, -87.5894, -55.6403, -82.833, -55.5506, -81.1278, -58.9609, -80.1406, -70.9867, -73.9482, -79.5125, -69.3712, -86.1536, -65.4224, -87.7691, -60.6659, -73.7688, -59.4095, -73.7688, -57.5248, -81.5766, -53.7556, -81.5766, -48.8196, -76.4612, -47.9221, -76.6407, -45.5887, -80.2305, -44.2426, -81.1279, -42.5374, -85.0767, -42.7169, -86.3331, -36.6215, -81.3655, -32.3456, -73.808, -32.2462, -60.8807, -28.1691, -55.5109, -24.3904, -51.235, -17.1312, -49.5445, -6.59049, -51.9311, 1.62439, -60.8199, 8.77702, -66.9309, 16.1107, -71.8789, 26.0063, -75.5732, 37.6718, -74.7752, 45.7126, -69.8046, 53.4424, -62.8649, 55.4034, -59.1136, 56.5117, -52.634, 84.4173, -71.389, 66.6428, -102.932, 54.0272, -111.889, 48.0551, -113.764, 28.1249, -113.973, 21.7566, -112.198, 17.2046, -108.306, 12.1908, -104.084, 7.43031, -96.1116, 2.34615, -85.4326, -6.10629, -75.0908, -12.7688, -73.5992, -19.9285, -83.5432, -22.2841, -93.5511, -27.8482, -101.412, -34.3178, -108.114, -42.1828, -110.748, -54.2895, -111.344, -71.5224, -108.044, -80.9135, -100.111, -83.2885, -98.792, -90.0141, -85.5282 )

[node name="Tentacle2" type="KinematicBody2D" parent="Node2D"]
editor/display_folded = true
position = Vector2( 83.9209, -62.2428 )
rotation = 0.0506146
z_index = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/Tentacle2"]
position = Vector2( -0.200104, -0.384832 )
rotation = 0.0163867
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
offset = Vector2( -121.573, 61.7074 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Tentacle2"]
visible = false
position = Vector2( -96.9953, 48.8102 )
polygon = PoolVector2Array( 88.0861, -29.205, 106.638, -29.926, 120.142, -22.0529, 123.452, -14.1199, 125.561, -2.10157, 125.308, 17.9184, 121.594, 30.2473, 104.494, 46.9152, 91.2786, 53.4621, 76.6174, 55.5996, 63.0291, 59.0189, 53.6849, 65.3712, 45.266, 76.0875, 43.23, 80.765, 34.7247, 76.5516, 30.9595, 83.6205, 40.3843, 88.5868, 38.2283, 96.6607, 38.6465, 117.513, 41.9271, 130.479, 44.8606, 138.914, 80.9441, 136.514, 78.2212, 125.446, 89.4627, 122.545, 87.6374, 115.185, 76.2373, 118.654, 75.5598, 113.636, 87.7589, 108.299, 75.1301, 109.427, 91.1379, 97.7069, 74.8205, 105.126, 76.0945, 97.3997, 79.1368, 94.3798, 81.6771, 91.2947, 94.0037, 86.69, 110.692, 86.9356, 128.66, 80.2809, 146.3, 63.3712, 155.665, 40.0195, 159.761, 21.3939, 160.567, 8.49747, 161.489, -6.72037, 161.163, -17.211, 155.608, -30.9096, 150.349, -38.6062, 148.139, -41.444, 146.897, -41.4367, 137.394, -48.8115, 129.212, -53.3032, 120.645, -57.7156, 104.705, -63.9156, 80.7501, -56.9717 )

[node name="Head" type="KinematicBody2D" parent="Node2D"]
position = Vector2( 71.669, -75.6507 )
rotation = 0.228863
z_index = 2
collision_mask = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D/Head"]
position = Vector2( -0.759178, -0.0209808 )
rotation = 0.00498772
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Head"]
visible = false
polygon = PoolVector2Array( -35.5756, 0.491089, -36.1858, 14.679, -30.3051, 28.2846, -22.9769, 36.0955, -11.8355, 38.1872, 14.7586, 35.8778, 28.3642, 29.9972, 33.7122, 20.6961, 34.3626, 5.24654, 35.3774, -1.8248, 30.208, -17.9335, 21.4385, -30.0525, -0.491844, -30.436, -18.2598, -27.6874, -28.4613, -19.646, -33.8647, -8.61024 )

[node name="Timer" type="Timer" parent="Node2D/Head"]

[node name="Trans" type="Timer" parent="Node2D/Head"]

[node name="Hurle" type="AudioStreamPlayer2D" parent="Node2D/Head"]
stream = ExtResource( 13 )

[node name="Progfer" type="AnimatedSprite" parent="Node2D"]
editor/display_folded = true
visible = false
position = Vector2( 23.9074, -3.92833 )
frames = ExtResource( 14 )
animation = "01Progfer"

[node name="Sprite" type="Sprite" parent="Node2D/Progfer"]
position = Vector2( 0.120372, 22.0081 )
scale = Vector2( 1.52206, 1 )
z_index = -2
texture = ExtResource( 15 )

[node name="Doubliks" type="AnimatedSprite" parent="Node2D"]
editor/display_folded = true
visible = false
position = Vector2( 49.5271, -9.13621 )
frames = ExtResource( 14 )
animation = "01Doubliks"
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="Node2D/Doubliks"]
position = Vector2( 1.00187, 26.9259 )
scale = Vector2( 1.14512, 1 )
z_index = -2
texture = ExtResource( 15 )

[node name="Tog" type="AnimatedSprite" parent="Node2D"]
visible = false
position = Vector2( 38.1795, -50.2038 )
frames = ExtResource( 14 )
animation = "01Tog"
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/Tog"]
position = Vector2( 0.58707, 14.2782 )
scale = Vector2( 0.959367, 1 )
z_index = -2
texture = ExtResource( 15 )

[node name="Dring" type="AudioStreamPlayer2D" parent="Node2D/Tog"]
stream = ExtResource( 16 )

[node name="Timer" type="Timer" parent="Node2D/Tog"]

[node name="OlHolo" type="AnimatedSprite" parent="Node2D"]
visible = false
position = Vector2( 10.3818, -40.0113 )
frames = ExtResource( 14 )
animation = "00OlH"
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Node2D/OlHolo"]
position = Vector2( 0.58707, 14.2782 )
scale = Vector2( 0.959367, 1 )
z_index = -2
texture = ExtResource( 15 )

[node name="dead" type="Sprite" parent="Node2D"]
position = Vector2( 88.6463, -75.3403 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )

[node name="walls" type="StaticBody2D" parent="Node2D"]
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/walls"]
visible = false
polygon = PoolVector2Array( -99.4272, -94.9294, -100.14, 115.529, 111.276, 115.431, 110.733, -94.3687, 33.0758, -89.6669, 17.2495, -72.0004, -2.07324, -55.438, -1.88921, -45.3165, -15.8752, -37.2193, -21.3935, -36.3203, -22.1007, -31.6142, -27.0374, 48.017, -28.1106, 51.2366, -31.5449, 54.2416, -32.5809, 61.8535, -74.9705, 59.2497, -74.2586, 52.4147, -78.388, 48.4276, -78.6728, 40.8806, -73.8894, -35.8578, -72.0052, -38.7887, -69.7024, -40.4635, -40.2889, -39.4167, -30.7799, -43.2309, -40.1753, -48.9005, -36.6084, -56.9739, -18.2089, -80.9212, -62.5765, -75.5251, -90.6061, -79.1225, -96.0451, -95.1658, -98.7587, -95.0783, -65.7922, -137.775, 140.174, -132.985, 129.352, 138.001, -129.999, 138.001, -123.349, -102.349 )

[node name="ROCKS" type="Node2D" parent="Node2D"]

[node name="rock" type="Sprite" parent="Node2D/ROCKS"]
position = Vector2( -7.76514, 207.337 )
scale = Vector2( 1.26097, 1.15219 )
z_index = 2
texture = ExtResource( 18 )

[node name="Scream" type="AudioStreamPlayer2D" parent="Node2D"]
position = Vector2( 71.5378, -75.0417 )
stream = ExtResource( 19 )

[node name="CanvasLayer" parent="." instance=ExtResource( 20 )]

[node name="mouse" parent="CanvasLayer" instance=ExtResource( 21 )]
position = Vector2( -129.341, -103.064 )

[node name="SOLTURN" type="Timer" parent="."]

[node name="ATT1" type="Timer" parent="."]

[node name="STEP" type="Timer" parent="."]

[node name="TENT" type="Timer" parent="."]

[node name="Charge" type="Timer" parent="."]

[node name="ACTIONDIAL" type="Timer" parent="."]

[node name="DEATH" type="Timer" parent="."]
[connection signal="timeout" from="Node2D/Head/Timer" to="Node2D/Head" method="_on_Timer_timeout"]
[connection signal="timeout" from="Node2D/Head/Trans" to="Node2D/Head" method="_on_Trans_timeout"]
[connection signal="timeout" from="Node2D/Tog/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Node2D/OlHolo" to="." method="_on_OlHolo_animation_finished"]
[connection signal="timeout" from="SOLTURN" to="." method="_on_SOLTURN_timeout"]
[connection signal="timeout" from="ATT1" to="." method="_on_ATT1_timeout"]
[connection signal="timeout" from="STEP" to="." method="_on_STEP_timeout"]
[connection signal="timeout" from="TENT" to="." method="_on_TENT_timeout"]
[connection signal="timeout" from="Charge" to="." method="_on_Charge_timeout"]
[connection signal="timeout" from="ACTIONDIAL" to="." method="_on_ACTIONDIAL_timeout"]
[connection signal="timeout" from="DEATH" to="." method="_on_DEATH_timeout"]
